# sdd-spec-check

./: .gitignore  Cargo.toml  LICENSE  README.md  sdd-spec-check.config.example.toml
.github/workflows/: ci.yml  release.yml
src/: check.rs  collect.rs  config.rs  main.rs  report.rs
tests/: e2e.rs
tests/fixtures/custom-pattern/: sdd-spec-check.config.toml
tests/fixtures/custom-pattern/spec/: cache.md
tests/fixtures/custom-pattern/test/: cache_test.rs
tests/fixtures/fail-missing-test/spec/: logger.md
tests/fixtures/fail-missing-test/test/: logger.test.ts
tests/fixtures/fail-text-mismatch/spec/: logger.md
tests/fixtures/fail-text-mismatch/test/: logger.test.ts
tests/fixtures/fail-unknown-id/: sdd-spec-check.config.toml
tests/fixtures/fail-unknown-id/test/: logger.test.ts
tests/fixtures/frontmatter-body-mention/spec/: notes.md
tests/fixtures/frontmatter-body-mention/test/: notes.test.ts
tests/fixtures/many-failures/spec/: a.md  b.md
tests/fixtures/many-failures/test/: a.test.ts  b.test.ts
tests/fixtures/multi-lang-pass/: sdd-spec-check.config.toml
tests/fixtures/multi-lang-pass/spec/: logger.md
tests/fixtures/multi-lang-pass/test/: logger_test.go  logger_test.py
tests/fixtures/pass/spec/: logger.md
tests/fixtures/pass/test/: logger.test.ts
tests/fixtures/spec-pattern-first-wins/: sdd-spec-check.config.toml
tests/fixtures/spec-pattern-first-wins/spec/: cache.md
tests/fixtures/spec-pattern-first-wins/test/: cache.test.ts
