[package]
name = "sdd-spec-check"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Verify that SDD specs and tests agree on rule IDs and text."
license = "MIT"
repository = "https://github.com/markus-azer/sdd-spec-check"
readme = "README.md"
keywords = ["sdd", "spec", "testing", "cli", "lint"]
categories = ["command-line-utilities", "development-tools::testing"]

[[bin]]
name = "sdd-spec-check"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
owo-colors = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = "thin"
strip = true
